--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
+    "chart.js": "^4.4.1",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/node": "18.11.10",
     "typescript": "^4.9.3"
   }
